Added few more questions